fixed navbar on mobile issue changed active nav color to orange

--- a/css/style.css
+++ b/css/style.css
@@ -1784,7 +1784,7 @@ NEW NAV BAR
 }
 
 .active-nav {
-    border-bottom: 2px solid red;
+    border-bottom: 2px solid #EC8838;
 }
 
 
